[gd_scene load_steps=19 format=3 uid="uid://dfbsd7yrlqe6"]

[ext_resource type="Theme" uid="uid://27eu6vn47mvd" path="res://base_theme.tres" id="1_yk21o"]
[ext_resource type="Script" path="res://screen_elements/power_up_selection/power_up_item_selection.gd" id="2_yl0bt"]
[ext_resource type="AudioStream" uid="uid://c3nuqxqmjnmfg" path="res://assets/sfx/ui_sfx/cursor_style_2.wav" id="4_0so1a"]
[ext_resource type="Script" path="res://entities/player/power_ups/player_power_up.gd" id="4_ct8a4"]
[ext_resource type="AudioStream" uid="uid://bjkcla7dbapyt" path="res://assets/sfx/ui_sfx/confirm_style_2_003.wav" id="5_b6x2n"]
[ext_resource type="AudioStream" uid="uid://c872y2b5dunyx" path="res://assets/sfx/ui_sfx/back_style_2_007.wav" id="6_a3cvb"]
[ext_resource type="Texture2D" uid="uid://c81rcys7md8fw" path="res://chrono_resurgence_icon.svg" id="7_y0wl5"]
[ext_resource type="Texture2D" uid="uid://bauxbcjb5w2dp" path="res://assets/graphics/ui_elements/GUI_x4.png" id="8_b1jtw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1og7v"]

[sub_resource type="Resource" id="Resource_bvdns"]
script = ExtResource("4_ct8a4")
power_up = "Name Test"
description = "Test Description"
cost = 99
is_enabled = true
is_selected = false
extra_health = 0
extra_armor = 0
extra_jump_power = 0.0
extra_speed = 0.0
extra_weapon_slot = "front"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m5tsq"]
load_path = "res://.godot/imported/02.png-f51470929e45bf77c9b163fbf1a1a57b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_s84ms"]
atlas = SubResource("CompressedTexture2D_m5tsq")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k14tu"]
atlas = SubResource("CompressedTexture2D_m5tsq")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_516i7"]
atlas = SubResource("CompressedTexture2D_m5tsq")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02vxu"]
atlas = SubResource("CompressedTexture2D_m5tsq")
region = Rect2(224, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tdvff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s84ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k14tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_516i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02vxu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_2jssu"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7nu2"]
_data = {
"new_animation": SubResource("Animation_2jssu")
}

[node name="ElementButton" type="Button"]
custom_minimum_size = Vector2(512, 128)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yk21o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1og7v")
toggle_mode = true
flat = true
script = ExtResource("2_yl0bt")
power_up = SubResource("Resource_bvdns")
focus_sfx = ExtResource("4_0so1a")
toggle_in_sfx = ExtResource("5_b6x2n")
toggle_out_sfx = ExtResource("6_a3cvb")

[node name="HelperText" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -377.0
offset_top = 8.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="SkillName" type="Label" parent="HelperText"]
layout_mode = 1
offset_left = 9.0
offset_top = 7.0
offset_right = 377.0
offset_bottom = 32.0
mouse_filter = 1
theme_override_font_sizes/font_size = 24
text = "Name"

[node name="Description" type="Label" parent="HelperText"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -88.0
offset_right = 377.0
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "This is a description for this equipment. This will help the player to understand the item"
autowrap_mode = 2

[node name="ImagWrapper" type="Control" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="ImagWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.2, 0.2, 0.2, 1)

[node name="TextureRect" type="TextureRect" parent="ImagWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_y0wl5")
expand_mode = 4
stretch_mode = 5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="ImagWrapper"]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_tdvff")
autoplay = "default"
frame_progress = 0.0353011
centered = false

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 40.0
grow_horizontal = 0
texture = ExtResource("8_b1jtw")
region_rect = Rect2(388, 148, 96, 88)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Cost" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 24
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w7nu2")
}
